update groovy and spock versions, fix problem with moldepict and POST